This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced with ••••


2014-08-20 20:02  rj - r63

   * utils.h, utils.c, clone.c
     - switch all long variables and parameters to llong aka. long long.

2014-08-11 18:11  rj - r62

   * utils.h, utils.c, clone.c
     - made the sources 32bit clean.

2014-08-11 16:11  rj - r61

   * utils.h, utils.c, clone.xcodeproj
     - in removeName() make sure to call removeTreeNode() only if node != NULL.
     - renamed namelen to naml in AVL tree and hash table functions.
     - store naml alongside the name in the nodes.
     - improved Xcode project settings, more warnings, c11, and do the Release builds using -Ofast.

2014-08-11 08:08  rj - r60

   * utils.c
     - in addTreeNode() in the case of (ord == 0) it is not necessary to deallocate the name and allocate/copy it again,
       since it is guaranteed that the new name is the same as the old name.
     - zero-out the value struct when modifying a node and no new value (NULL) was supplied.

2014-07-24 17:35  rj - r59

   * clone.c
     - make sure not to create by accident a FS tree on the wrong device.
     - release of version 1.0.6b.


•••• 2014-07-20 -- Created a snapshot of r58 for release as v1.0.5, stored it on Google Drive and submitted it to FreeBSD Ports ••••


2014-07-20 16:43  rj - r58

   * clone.c, clone.1
     - release of version 1.0.5 (r58).

2014-07-19 23:24  rj - r57

   * clone.c
     - only call removeFSName() if the respective table is not nil.

2014-07-19 22:57  rj - r56

   * clone.c
     - in synchronization mode don't delete excluded items from the destination.
     - if in total only 1 item is copied then use singular in the final statistics message.

2014-07-17 20:42  rj - r55

   * clone.c
     - implemented static inline pthread_cond_wait_flag().
     - directory attributes are now set at the end of clone() and not after the call to clone().
