@@ -6,6 +6,11 @@ Copyright (c) 2013. All rights reserved.
 Note: Milestones are embraced with ••••
 
 
+2014-12-12 23:08  rj - r64
+
+   * utils.c, clone.c
+     - formatting.
+
 2014-08-20 20:02  rj - r63
 
    * utils.h, utils.c, clone.c
